2006-01-26  Mike Fabian  <mfabian@suse.de>
	reviewed by: plam
	
	* src/fcacache.c (FcGlobalCacheReadDir):

	Don't crash on non-existant directories in global cache.

2006-01-26  Patirck Lam  <plam@mit.edu>
	* src/fccache.c (FcGlobalCacheSave, FcDirCacheWrite):
	* src/fccfg.c (FcConfigAddFontDirSubdirs, FcConfigNormalizeFontDir):
	* src/fcdir.c (FcDirScanConfig):
	* src/fcxml.c (FcEndElement):

	Stop trampling the directory name when writing out caches.
	(with Mike Fabian:) Beef up FcConfigNormalizeFontDir to scan
	subdirs when necessary.  Don't scan directories that can't be
	normalized.

2006-01-25  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcDirCacheOpen, FcDirCacheWrite):
	* src/fccfg.c (FcConfigEvaluate):
	* src/fcfreetype.c (FcPatternAddWithBinding):

	Fix additional memory leaks reported by Ronny V. Vindenes: don't
	invoke FcValueSave on hashed static strings in
	FcPatternAddWithBinding.  

	Add another st_dev check in FcDirCacheOpen.

2006-01-24  James Su  <james.su@gmail.com>
	reviewed by: plam
	
	* src/fcfreetype.c (FcFreeTypeIsExclusiveLang):
	* fc-lang/zh_hk.orth:

	Treat zh-hk fonts differently from zh-tw fonts.  This patch may
	cause fontconfig to treat A-X fonts differently from A-Y fonts;
	please mail the fontconfig list if this causes any problems.

2006-01-24  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcDirCacheUnlink, FcDirCacheWrite):
	* src/fcfreetype.c (FcFreeTypeQuery):

	Fix memory leaks reported by Ronny V. Vindenes.

2006-01-19  Andreas Schwab  <schwab@suse.de>
	reviewed by: plam

	* src/fcpat.c (FcStrNeededBytes):

	Fix for unaligned memory accesses.

2006-01-18  Mike Fabian  <mfabian@suse.de>
	reviewed by: plam
	
	* src/fcdir.c (FcDirScanConfig):

	Properly order the FcConfigAddFontDir and FcConfigNormalizeFontDir
	calls to avoid crashes.

2006-01-14  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcDirCacheConsume):

	Fix segfault when consuming zero-length caches in fc-cat