@@ -1,3 +1,10 @@
+2006-01-26  Patrick Lam  <plam@mit.edu>
+	* src/fccache.c (FcDirCacheValid, FcDirCacheHasCurrentArch):
+	* src/fccfg.c (FcConfigNormalizeFontDir):
+
+	Add a couple of missing normalizations to make fc-cache work
+	right; only scan subdirectories once.
+
 2006-01-26  Mike Fabian  <mfabian@suse.de>
 	reviewed by: plam
 	
